# Perception

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_and_package.sh  compile.sh  pyqt.py  pyqt2.py  pyqt3.py  pyqt4.py
cmake/: toolchain.cmake
cppcallppython/: CMakeLists.txt  main.cpp  stream_redirect.cpp  stream_redirect.h
pybind/: CMakeLists.txt  pybinder.cpp
strategy/: CMakeLists.txt  build_and_package.sh  main.cpp
vtk_qt_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  base.cpp  curve2d.cpp  curve3d.cpp  cutline.cpp  cutplane.cpp  main.cpp  scalarbar.cpp
vtktest/: CMakeLists.txt  vtkTest.cpp
