cmake_minimum_required(VERSION 3.10)

# 设置项目名称
project(vtktest)

# 设置 C++ 标准
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(${SRC_ROOT_DIR})
include_directories(${SRC_ROOT_DIR}/third-party/VTK-9-4-1-install/include/vtk-9.4)
link_directories(${SRC_ROOT_DIR}/third-party/VTK-9-4-1-install/lib)
link_directories(${SRC_ROOT_DIR}/third-party/VTK-9-4-1-install/bin)
set(VTKDLL vtkcgns-9.4.dll                                                                                 
vtkChartsCore-9.4.dll                                                                           
vtkCommonColor-9.4.dll                                                                          
vtkCommonComputationalGeometry-9.4.dll                                                          
vtkCommonCore-9.4.dll                                                                           
vtkCommonDataModel-9.4.dll                                                                      
vtkCommonExecutionModel-9.4.dll                                                                 
vtkCommonMath-9.4.dll                                                                           
vtkCommonMisc-9.4.dll                                                                           
vtkCommonSystem-9.4.dll                                                                         
vtkCommonTransforms-9.4.dll                                                                     
vtkDICOMParser-9.4.dll                                                                          
vtkDomainsChemistry-9.4.dll                                                                     
vtkDomainsChemistryOpenGL2-9.4.dll                                                              
vtkdoubleconversion-9.4.dll                                                                     
vtkexodusII-9.4.dll                                                                             
vtkexpat-9.4.dll                                                                                
vtkFiltersAMR-9.4.dll                                                                           
vtkFiltersCellGrid-9.4.dll                                                                      
vtkFiltersCore-9.4.dll                                                                          
vtkFiltersExtraction-9.4.dll                                                                    
vtkFiltersFlowPaths-9.4.dll                                                                     
vtkFiltersGeneral-9.4.dll                                                                       
vtkFiltersGeneric-9.4.dll                                                                       
vtkFiltersGeometry-9.4.dll                                                                      
vtkFiltersGeometryPreview-9.4.dll                                                               
vtkFiltersHybrid-9.4.dll                                                                        
vtkFiltersHyperTree-9.4.dll                                                                     
vtkFiltersImaging-9.4.dll                                                                       
vtkFiltersModeling-9.4.dll                                                                      
vtkFiltersParallel-9.4.dll                                                                      
vtkFiltersParallelImaging-9.4.dll                                                               
vtkFiltersPoints-9.4.dll                                                                        
vtkFiltersProgrammable-9.4.dll                                                                  
vtkFiltersReduction-9.4.dll                                                                     
vtkFiltersSelection-9.4.dll                                                                     
vtkFiltersSMP-9.4.dll                                                                           
vtkFiltersSources-9.4.dll                                                                       
vtkFiltersStatistics-9.4.dll                                                                    
vtkFiltersTemporal-9.4.dll                                                                      
vtkFiltersTensor-9.4.dll                                                                        
vtkFiltersTexture-9.4.dll                                                                       
vtkFiltersTopology-9.4.dll                                                                      
vtkFiltersVerdict-9.4.dll                                                                       
vtkfmt-9.4.dll                                                                                  
vtkfreetype-9.4.dll                                                                             
vtkGeovisCore-9.4.dll                                                                           
vtkgl2ps-9.4.dll                                                                                
vtkglad-9.4.dll                                                                                 
vtkhdf5-9.4.dll                                                                                 
vtkhdf5_hl-9.4.dll                                                                              
vtkImagingColor-9.4.dll                                                                         
vtkImagingCore-9.4.dll                                                                          
vtkImagingFourier-9.4.dll                                                                       
vtkImagingGeneral-9.4.dll                                                                       
vtkImagingHybrid-9.4.dll                                                                        
vtkImagingMath-9.4.dll                                                                          
vtkImagingMorphological-9.4.dll                                                                 
vtkImagingSources-9.4.dll                                                                       
vtkImagingStatistics-9.4.dll                                                                    
vtkImagingStencil-9.4.dll                                                                       
vtkInfovisCore-9.4.dll                                                                          
vtkInfovisLayout-9.4.dll                                                                        
vtkInteractionImage-9.4.dll                                                                     
vtkInteractionStyle-9.4.dll                                                                     
vtkInteractionWidgets-9.4.dll                                                                   
vtkIOAMR-9.4.dll                                                                                
vtkIOAsynchronous-9.4.dll                                                                       
vtkIOCellGrid-9.4.dll                                                                           
vtkIOCesium3DTiles-9.4.dll                                                                      
vtkIOCGNSReader-9.4.dll                                                                         
vtkIOChemistry-9.4.dll                                                                          
vtkIOCityGML-9.4.dll                                                                            
vtkIOCONVERGECFD-9.4.dll                                                                        
vtkIOCore-9.4.dll                                                                               
vtkIOEngys-9.4.dll                                                                              
vtkIOEnSight-9.4.dll                                                                            
vtkIOERF-9.4.dll                                                                                
vtkIOExodus-9.4.dll                                                                             
vtkIOExport-9.4.dll                                                                             
vtkIOExportGL2PS-9.4.dll                                                                        
vtkIOExportPDF-9.4.dll                                                                          
vtkIOFDS-9.4.dll                                                                                
vtkIOFLUENTCFF-9.4.dll                                                                          
vtkIOGeometry-9.4.dll                                                                           
vtkIOHDF-9.4.dll                                                                                
vtkIOImage-9.4.dll                                                                              
vtkIOImport-9.4.dll                                                                             
vtkIOInfovis-9.4.dll                                                                            
vtkIOIOSS-9.4.dll                                                                               
vtkIOLegacy-9.4.dll                                                                             
vtkIOLSDyna-9.4.dll                                                                             
vtkIOMINC-9.4.dll                                                                               
vtkIOMotionFX-9.4.dll                                                                           
vtkIOMovie-9.4.dll                                                                              
vtkIONetCDF-9.4.dll                                                                             
vtkIOOggTheora-9.4.dll                                                                          
vtkIOParallel-9.4.dll                                                                           
vtkIOParallelXML-9.4.dll                                                                        
vtkIOPLY-9.4.dll                                                                                
vtkIOSegY-9.4.dll                                                                               
vtkIOSQL-9.4.dll                                                                                
vtkioss-9.4.dll                                                                                 
vtkIOTecplotTable-9.4.dll                                                                       
vtkIOVeraOut-9.4.dll                                                                            
vtkIOVideo-9.4.dll                                                                              
vtkIOXML-9.4.dll                                                                                
vtkIOXMLParser-9.4.dll                                                                          
vtkjpeg-9.4.dll                                                                                 
vtkjsoncpp-9.4.dll                                                                              
vtkkissfft-9.4.dll                                                                              
vtklibharu-9.4.dll                                                                              
vtklibproj-9.4.dll                                                                              
vtklibxml2-9.4.dll                                                                              
vtkloguru-9.4.dll                                                                               
vtklz4-9.4.dll                                                                                  
vtklzma-9.4.dll                                                                                 
vtkmetaio-9.4.dll                                                                               
vtknetcdf-9.4.dll                                                                               
vtkogg-9.4.dll                                                                                  
vtkParallelCore-9.4.dll                                                                         
vtkParallelDIY-9.4.dll                                                                          
vtkpng-9.4.dll                                                                                  
vtkpugixml-9.4.dll                                                                              
vtkRenderingAnnotation-9.4.dll                                                                  
vtkRenderingCellGrid-9.4.dll                                                                    
vtkRenderingContext2D-9.4.dll                                                                   
vtkRenderingContextOpenGL2-9.4.dll                                                              
vtkRenderingCore-9.4.dll                                                                        
vtkRenderingFreeType-9.4.dll                                                                    
vtkRenderingGL2PSOpenGL2-9.4.dll                                                                
vtkRenderingHyperTreeGrid-9.4.dll                                                               
vtkRenderingImage-9.4.dll                                                                       
vtkRenderingLabel-9.4.dll                                                                       
vtkRenderingLICOpenGL2-9.4.dll                                                                  
vtkRenderingLOD-9.4.dll                                                                         
vtkRenderingOpenGL2-9.4.dll                                                                     
vtkRenderingSceneGraph-9.4.dll                                                                  
vtkRenderingUI-9.4.dll                                                                          
vtkRenderingVolume-9.4.dll                                                                      
vtkRenderingVolumeOpenGL2-9.4.dll                                                               
vtkRenderingVtkJS-9.4.dll                                                                       
vtksqlite-9.4.dll                                                                               
vtksys-9.4.dll                                                                                  
vtkTestingCore-9.4.dll                                                                          
vtkTestingRendering-9.4.dll                                                                     
vtktheora-9.4.dll                                                                               
vtktiff-9.4.dll                                                                                 
vtktoken-9.4.dll                                                                                
vtkverdict-9.4.dll                                                                              
vtkViewsContext2D-9.4.dll                                                                       
vtkViewsCore-9.4.dll                                                                            
vtkViewsInfovis-9.4.dll                                                                         
vtkWrappingTools-9.4.dll                                                                        
vtkzlib-9.4.dll)

set(VTKLIB vtkcgns-9.4.lib                                                                                 
vtkChartsCore-9.4.lib                                                                           
vtkCommonColor-9.4.lib                                                                          
vtkCommonComputationalGeometry-9.4.lib                                                          
vtkCommonCore-9.4.lib                                                                           
vtkCommonDataModel-9.4.lib                                                                      
vtkCommonExecutionModel-9.4.lib                                                                 
vtkCommonMath-9.4.lib                                                                           
vtkCommonMisc-9.4.lib                                                                           
vtkCommonSystem-9.4.lib                                                                         
vtkCommonTransforms-9.4.lib                                                                     
vtkDICOMParser-9.4.lib                                                                          
vtkDomainsChemistry-9.4.lib                                                                     
vtkDomainsChemistryOpenGL2-9.4.lib                                                              
vtkdoubleconversion-9.4.lib                                                                     
vtkexodusII-9.4.lib                                                                             
vtkexpat-9.4.lib                                                                                
vtkFiltersAMR-9.4.lib                                                                           
vtkFiltersCellGrid-9.4.lib                                                                      
vtkFiltersCore-9.4.lib                                                                          
vtkFiltersExtraction-9.4.lib                                                                    
vtkFiltersFlowPaths-9.4.lib                                                                     
vtkFiltersGeneral-9.4.lib                                                                       
vtkFiltersGeneric-9.4.lib                                                                       
vtkFiltersGeometry-9.4.lib                                                                      
vtkFiltersGeometryPreview-9.4.lib                                                               
vtkFiltersHybrid-9.4.lib                                                                        
vtkFiltersHyperTree-9.4.lib                                                                     
vtkFiltersImaging-9.4.lib                                                                       
vtkFiltersModeling-9.4.lib                                                                      
vtkFiltersParallel-9.4.lib                                                                      
vtkFiltersParallelImaging-9.4.lib                                                               
vtkFiltersPoints-9.4.lib                                                                        
vtkFiltersProgrammable-9.4.lib                                                                  
vtkFiltersReduction-9.4.lib                                                                     
vtkFiltersSelection-9.4.lib                                                                     
vtkFiltersSMP-9.4.lib                                                                           
vtkFiltersSources-9.4.lib                                                                       
vtkFiltersStatistics-9.4.lib                                                                    
vtkFiltersTemporal-9.4.lib                                                                      
vtkFiltersTensor-9.4.lib                                                                        
vtkFiltersTexture-9.4.lib                                                                       
vtkFiltersTopology-9.4.lib                                                                      
vtkFiltersVerdict-9.4.lib                                                                       
vtkfmt-9.4.lib                                                                                  
vtkfreetype-9.4.lib                                                                             
vtkGeovisCore-9.4.lib                                                                           
vtkgl2ps-9.4.lib                                                                                
vtkglad-9.4.lib                                                                                 
vtkhdf5-9.4.lib                                                                                 
vtkhdf5_hl-9.4.lib                                                                              
vtkImagingColor-9.4.lib                                                                         
vtkImagingCore-9.4.lib                                                                          
vtkImagingFourier-9.4.lib                                                                       
vtkImagingGeneral-9.4.lib                                                                       
vtkImagingHybrid-9.4.lib                                                                        
vtkImagingMath-9.4.lib                                                                          
vtkImagingMorphological-9.4.lib                                                                 
vtkImagingSources-9.4.lib                                                                       
vtkImagingStatistics-9.4.lib                                                                    
vtkImagingStencil-9.4.lib                                                                       
vtkInfovisCore-9.4.lib                                                                          
vtkInfovisLayout-9.4.lib                                                                        
vtkInteractionImage-9.4.lib                                                                     
vtkInteractionStyle-9.4.lib                                                                     
vtkInteractionWidgets-9.4.lib                                                                   
vtkIOAMR-9.4.lib                                                                                
vtkIOAsynchronous-9.4.lib                                                                       
vtkIOCellGrid-9.4.lib                                                                           
vtkIOCesium3DTiles-9.4.lib                                                                      
vtkIOCGNSReader-9.4.lib                                                                         
vtkIOChemistry-9.4.lib                                                                          
vtkIOCityGML-9.4.lib                                                                            
vtkIOCONVERGECFD-9.4.lib                                                                        
vtkIOCore-9.4.lib                                                                               
vtkIOEngys-9.4.lib                                                                              
vtkIOEnSight-9.4.lib                                                                            
vtkIOERF-9.4.lib                                                                                
vtkIOExodus-9.4.lib                                                                             
vtkIOExport-9.4.lib                                                                             
vtkIOExportGL2PS-9.4.lib                                                                        
vtkIOExportPDF-9.4.lib                                                                          
vtkIOFDS-9.4.lib                                                                                
vtkIOFLUENTCFF-9.4.lib                                                                          
vtkIOGeometry-9.4.lib                                                                           
vtkIOHDF-9.4.lib                                                                                
vtkIOImage-9.4.lib                                                                              
vtkIOImport-9.4.lib                                                                             
vtkIOInfovis-9.4.lib                                                                            
vtkIOIOSS-9.4.lib                                                                               
vtkIOLegacy-9.4.lib                                                                             
vtkIOLSDyna-9.4.lib                                                                             
vtkIOMINC-9.4.lib                                                                               
vtkIOMotionFX-9.4.lib                                                                           
vtkIOMovie-9.4.lib                                                                              
vtkIONetCDF-9.4.lib                                                                             
vtkIOOggTheora-9.4.lib                                                                          
vtkIOParallel-9.4.lib                                                                           
vtkIOParallelXML-9.4.lib                                                                        
vtkIOPLY-9.4.lib                                                                                
vtkIOSegY-9.4.lib                                                                               
vtkIOSQL-9.4.lib                                                                                
vtkioss-9.4.lib                                                                                 
vtkIOTecplotTable-9.4.lib                                                                       
vtkIOVeraOut-9.4.lib                                                                            
vtkIOVideo-9.4.lib                                                                              
vtkIOXML-9.4.lib                                                                                
vtkIOXMLParser-9.4.lib                                                                          
vtkjpeg-9.4.lib                                                                                 
vtkjsoncpp-9.4.lib                                                                              
vtkkissfft-9.4.lib                                                                              
vtklibharu-9.4.lib                                                                              
vtklibproj-9.4.lib                                                                              
vtklibxml2-9.4.lib                                                                              
vtkloguru-9.4.lib                                                                               
vtklz4-9.4.lib                                                                                  
vtklzma-9.4.lib                                                                                 
vtkmetaio-9.4.lib                                                                               
vtknetcdf-9.4.lib                                                                               
vtkogg-9.4.lib                                                                                  
vtkParallelCore-9.4.lib                                                                         
vtkParallelDIY-9.4.lib                                                                          
vtkpng-9.4.lib                                                                                  
vtkpugixml-9.4.lib                                                                              
vtkRenderingAnnotation-9.4.lib                                                                  
vtkRenderingCellGrid-9.4.lib                                                                    
vtkRenderingContext2D-9.4.lib                                                                   
vtkRenderingContextOpenGL2-9.4.lib                                                              
vtkRenderingCore-9.4.lib                                                                        
vtkRenderingFreeType-9.4.lib                                                                    
vtkRenderingGL2PSOpenGL2-9.4.lib                                                                
vtkRenderingHyperTreeGrid-9.4.lib                                                               
vtkRenderingImage-9.4.lib                                                                       
vtkRenderingLabel-9.4.lib                                                                       
vtkRenderingLICOpenGL2-9.4.lib                                                                  
vtkRenderingLOD-9.4.lib                                                                         
vtkRenderingOpenGL2-9.4.lib                                                                     
vtkRenderingSceneGraph-9.4.lib                                                                  
vtkRenderingUI-9.4.lib                                                                          
vtkRenderingVolume-9.4.lib                                                                      
vtkRenderingVolumeOpenGL2-9.4.lib                                                               
vtkRenderingVtkJS-9.4.lib                                                                       
vtksqlite-9.4.lib                                                                               
vtksys-9.4.lib                                                                                  
vtkTestingCore-9.4.lib                                                                          
vtkTestingRendering-9.4.lib                                                                     
vtktheora-9.4.lib                                                                               
vtktiff-9.4.lib                                                                                 
vtktoken-9.4.lib                                                                                
vtkverdict-9.4.lib                                                                              
vtkViewsContext2D-9.4.lib                                                                       
vtkViewsCore-9.4.lib                                                                            
vtkViewsInfovis-9.4.lib                                                                         
vtkWrappingTools-9.4.lib                                                                        
vtkzlib-9.4.lib)

file(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
message(STATUS "Compiling Source files: ${SRC_FILES}")
message(STATUS "Current Compiling directory: ${CMAKE_CURRENT_SOURCE_DIR}")

# 添加可执行文件
add_executable(${PROJECT_NAME} ${SRC_FILES})

# 链接 VTK 库
target_link_libraries(${PROJECT_NAME} PRIVATE ${VTKDLL} ${VTKLIB})
